# vulmcp

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/vulnixmcp/: database.py  models.py  reporter.py  scanner.py  scoring.py  server.py  tasks.py  vulns.py
tests/: test_scanner.py  test_scoring.py  test_vulns.py
