[project]
name = "vulnixmcp"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastmcp==3.4.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "celery>=5.3",
    "redis>=5.0",
    "python-nmap>=0.7",
    "requests>=2.31",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "uvicorn>=0.30",
    "fastapi>=0.111",
    "pytest>=8.0",
    "pytest-asyncio>=0.23"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]
